syntax = "proto3";

message BroadcastData {
  repeated bytes data = 1;
  bool is_resp = 2;
}

